syntax = "proto3";

import "user_service/user.proto";

package user;

service UserService {
    rpc Create(UserRes) returns(UserReq);
    rpc GetUser(ById) returns(UserReq);
    rpc Update(UserReq) returns(Mess);
    rpc Delete(ById) returns(Mess);
    rpc ListUsers(Mess) returns(ListUser);
    rpc CheckField(Checkfild) returns(Mess);
    rpc GetByEmail(GetByemail) returns(UserReq);
    rpc SqlBld(SqlbldRes) returns (Mess);
}